package hallserver_friend;

//协议主码 本服独有协议 占用 101-654 公共占用1-50 游戏公共占用50-100
enum main {
	hallserver_friend = 104;
}
//协议子码 req res 占用1-80  通知占用80-100
enum sub {
    AddFriendReq           = 1;       //请求添加好友
    AddFriendRes           = 2;       //回复添加好友
    AgreeAddFriendReq      = 3;       //同意添加好友请求
    AgreeAddFriendRes      = 4;       //同意添加好友回复
    RefuseAddFriendReq     = 5;       //拒绝添加好友请求
    RefuseAddFriendRes     = 6;       //拒绝添加好友回复
    DelFriendReq           = 7;       //删除好友请求
    DelFriendRes           = 8;       //删除好友回复
    FriendSugReq           = 9;       //请求好友推荐
    FriendSugRes           = 10;      //回复好友推荐

    FriendListNotice       = 81;      //通知好友列表
    AddReqListNotice       = 82;      //通知请求添加好友列表
    AddReqNotice           = 83;      //通知请求添加好友
    AddFriendNotice        = 84;      //通知添加好友
    DelFriendNotice        = 85;      //通知删除好友
}

message OneFriend {
    optional int64 player_id = 1;           //玩家ID
    optional string nickname = 2;           //昵称
    optional int64 last_logout_time = 3;    //最后在线时间
    optional int32 is_online = 4;           //是否在线
}

//通知好友列表
message FriendListNotice {
    repeated OneFriend friend_list = 1;     //好友列表
}

//请求添加好友
message AddFriendReq {
    optional int64 player_id = 1;           //玩家ID
}

//回复添加好友
message AddFriendRes {
    optional int64 player_id = 1;           //玩家ID
}

//通知请求添加好友列表
message AddReqListNotice {
    repeated int64 player_id_list = 1;      //玩家ID列表
    repeated string nickname_list = 2;      //玩家昵称列表
}

//同意添加好友请求
message AgreeAddFriendReq {
    optional int64 player_id = 1;           //玩家ID
}

//同意添加好友回复
message AgreeAddFriendRes {
    optional int64 player_id = 1;           //玩家ID
}

//拒绝添加好友请求
message RefuseAddFriendReq {
    optional int64 player_id = 1;           //玩家ID
}

//拒绝添加好友回复
message RefuseAddFriendRes {
    optional int64 player_id = 1;           //玩家ID
}

//删除好友请求
message DelFriendReq {
    optional int64 player_id = 1;           //玩家ID
}

//删除好友回复
message DelFriendRes {
    optional int64 player_id = 1;           //玩家ID
}

//通知请求添加好友
message AddReqNotice {
    optional int64 player_id = 1;           //玩家ID
    optional string nickname = 2;           //昵称
}

//通知添加好友
message AddFriendNotice {
    optional OneFriend friend_info = 1;     //好友信息
}

//通知删除好友
message DelFriendNotice {
    optional int64 player_id = 1;           //玩家ID
}

//请求好友推荐
message FriendSugReq {
    optional int64 player_id = 1;           //玩家ID
}

//回复好友推荐
message FriendSugRes {
    repeated int64 player_id_list = 1;      //玩家ID列表
    repeated string nickname_list = 2;      //玩家昵称列表
}